[metadata]
name = sedg
version = 0.0.1
author = Jamie Strandboge
author_email = jamie@influxdata.com
url = https://github.com/influxdata/sedg
description = Tools for tracking security issues flexibly in version control
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires >= 3.8
install_requires =
    pyyaml
    requests>=2.31.0

[options.entry_points]
console_scripts =
    cve-add = cvelib:cve_add
    cve-check-syntax = cvelib:cve_check_syntax
    cve-report = cvelib:cve_report
    gh-dump-alerts = cvelib:gh_dump_alerts

[options.extras_require]
cache =
    requests_cache==1.0.1
dev =
    black==22.12.0
    coverage
    flake8
    pylint

[options.packages.find]
exclude =
    tests

# compatible with black
[flake8]
max-line-length = 88
# https://github.com/PyCQA/flake8-bugbear#opinionated-warnings (B*, below)
# C	complexity checks
# E	pycodestyle errors
# F	pyflakes fatals
# W	pycodestyle warnings
# B	Bugbear checks (default opinionated warnings, see controversial below)
# B901	Use of 'return x' in a generator is invalid
# B902	Invalid first argument for method (use self for inst and cls for class)
# B903	Enforce use of collections.namedtuple (or typing.NamedTuple)
# B950	Line too long, but allow 10% more. Should also disable pycodestyle E501
select = C,E,F,W,B,B901,B950
ignore =
    # The default ignore list:
    E203,W503,W504,E501
    # Common definitions:
    # D203: 1 blank line required before class docstring
    # F401: Module imported but unused
    # E123: closing bracket does not match indentation of opening bracket’s line
    # E203: whitespace before ':'
    # W503: line break before binary operator (not a pep8 issue, should be ignored)
    # W504: line break after binary operator
    # E501: line too long (using B950 from flake8-bugbear)
    # E402: module level import not at top of file
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
exclude =
    .git,
    __pycache__,
    build,
    staging,
    dist,
    *.pyc,
    *.egg-info,
